# Bearmax_Robot_Control

./: .gitignore  .gitmodules  README.md
.github/workflows/: docker-image.yml
arduino/controller_board/: Makefile  body.cpp  body.hpp  controller_board.ino  head.cpp  head.hpp  sketch.json
arduino/eye_screen_board/: draw_utils.cpp  draw_utils.h  eye_screen_board.ino  eyes_closed.h  sketch.json
arduino/eye_screen_board/images/: eyes_closed.h
arduino/head/: full_vehicle_code.ino
arduino/slave_board/: Makefile  body.cpp  body.hpp  sketch.json  slave_board.ino
arduino/wearable/: sketch.json  wearable.ino
ros_ws/: .dockerignore  Dockerfile  Dockerfile.ros  Dockerfile.ros_build  Makefile  docker-compose.yml
ros_ws/scripts/: build_docker.sh  demo.sh  install_rosdeps.sh  refresh.sh  rosdep.sh  run_docker_dev.sh
ros_ws/src/bearmax/: CMakeLists.txt  package.xml  requirements.txt  robot.rosinstall
ros_ws/src/bearmax_analysis/: package.xml  setup.cfg  setup.py
ros_ws/src/bearmax_analysis/bearmax_analysis/: stress_analyzer.py
ros_ws/src/bearmax_behavior/: CMakeLists.txt  bt_project.btproj  package.xml
ros_ws/src/bearmax_behavior/src/: behavior_tree.cpp
ros_ws/src/bearmax_behavior/trees/: main.xml
ros_ws/src/bearmax_bringup/: CMakeLists.txt  package.xml
ros_ws/src/bearmax_bringup/launch/: base.launch.py  bearmax.launch.py  follow_face.launch.py  task.launch.py
ros_ws/src/bearmax_description/: CMakeLists.txt  package.xml
ros_ws/src/bearmax_description/config/: joint_names_bearmax_description.yaml  main.rviz  my_controllers.yaml
ros_ws/src/bearmax_description/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
ros_ws/src/bearmax_description/meshes/: base_link.STL  camera_link.STL  chassis_link.STL  head_platform_link.STL  left_arm_elbow_link.STL  left_arm_rotator_link.STL  left_arm_shoulder_link.STL  left_arm_shoulder_link01.STL  left_ear_pitch_link.STL  left_ear_rotator_link.STL  right_arm_elbow_link.STL  right_arm_rotator_link.STL  right_arm_shoulder_link.STL  right_ear_pitch_link.STL  right_ear_rotator_link.STL  torso_link.STL
ros_ws/src/bearmax_description/ros2_control/: main_hardware.ros2_control.xacro  wearable_sensor_package.ros2_control.xacro
ros_ws/src/bearmax_description/urdf/: arm.xacro  bearmax_description.csv  bearmax_description.urdf  bearmax_description.urdf.xacro  hardware.gazebo_control.xacro  hardware.ros2_control.xacro  head.xacro  materials.xacro  robot.urdf.xacro  robot_base.xacro
ros_ws/src/bearmax_emotion/: package.xml  setup.cfg  setup.py
ros_ws/src/bearmax_emotion/bearmax_emotion/: emotion_game.py  emotion_pipeline.py  emotion_recognizer.py  utils.py
ros_ws/src/bearmax_emotion/launch/: camera.launch.py  game.launch.py  pipeline.launch.py
ros_ws/src/bearmax_hardware/: CMakeLists.txt  bearmax_hardware.xml  package.xml
ros_ws/src/bearmax_hardware/include/bearmax_hardware/: arduino_comms.hpp  bearmax_arduino.hpp  visibility_control.h  wearable_sensor_package.hpp
ros_ws/src/bearmax_hardware/src/: arduino_comms.cpp  bearmax_arduino.cpp  wearable_sensor_package.cpp
ros_ws/src/bearmax_moveit/: CMakeLists.txt  package.xml
ros_ws/src/bearmax_moveit/include/bearmax_moveit/: task_server.hpp
ros_ws/src/bearmax_moveit/launch/: face_follower.launch.py  launch_robot.launch.py  launch_robot.launch.py.old  move_group_test.launch.py  task_server.launch.py
ros_ws/src/bearmax_moveit/src/: bearmax_moveit.cpp  face_follower.cpp  face_follower_task.cpp  task_server.cpp
ros_ws/src/bearmax_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/bearmax_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml
ros_ws/src/bearmax_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros_ws/src/bearmax_msgs/: CMakeLists.txt  package.xml
ros_ws/src/bearmax_msgs/action/: Task.action
ros_ws/src/bearmax_msgs/msg/: Emotion.msg  EmotionGameState.msg  EmotionScores.msg  Foobar.msg  StackCommand.msg  StackRequest.msg  StressValue.msg  WSPSensorDataRaw.msg
ros_ws/src/bearmax_msgs/srv/: Foobar.srv
ros_ws/src/bearmax_stack/: package.xml  setup.cfg  setup.py
ros_ws/src/bearmax_stack/bearmax_stack/: asyncrcl.py  stack_connector.py
ros_ws/src/bearmax_stack/bearmax_stack/ssl/: client-crt.pem  client-key.pem  server-crt.pem
ros_ws/src/bearmax_stack/launch/: stack.launch.py
ros_ws/src/bearmax_tasks/: CMakeLists.txt  package.xml
ros_ws/src/bearmax_tasks/src/: bearmax_tasks.cpp
ros_ws/src/bearmax_wsp/: package.xml  setup.cfg  setup.py
ros_ws/src/bearmax_wsp/bearmax_wsp/: wsp_connector.py
ros_ws/src/bearmax_wsp/launch/: wsp.launch.py
