<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bearmax</name>
  <version>0.0.0</version>
  <description>Bearmax meta package</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>bearmax_description</exec_depend>
  <exec_depend>bearmax_msgs</exec_depend>
  <exec_depend>bearmax_hardware</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
