<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bearmax_emotion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>python3-opencv</depend>
  <depend>python-tensorflow-pip</depend>
  <depend>python3-scipy</depend>
  <depend>python3-dlib-pip</depend>
  <depend>python3-joblib</depend>
  <depend>python3-numpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bearmax_msgs</depend>

  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
